# controlrs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: mdbook.yml
docs/: book.toml
examples/: ekf_pendulum.rs  ekf_simple_tracking.rs  inverted_pendulum.rs  kalman_filters.rs  lqr_airplane.rs  quadcopter_lqr.rs  quadcopter_pid.rs  temperature_control_pid.rs
src/: lib.rs
src/control/: lqr.rs  mod.rs  pid.rs
src/filters/: ekf.rs  kalman.rs  mod.rs
src/math/: DARE.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
tests/: active.rs  control_pid_tests.rs  ekf_tests.rs  lqr_tests.rs  math_tests.rs
