[package]
name = "controlrs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
plotters = "0.3.7"
rand = "0.8.5"
rand_distr = "0.4.3"


[dependencies]
approx = "0.5.1"
nalgebra = "0.33.0"
num-traits = "0.2.19"
plotters-backend = "0.3.7"
proptest = {version = "1.6.0", features = ["attr-macro"]}

